THRIFT-5456: [c++] Disable SIGPIPE on TSocketServer